--- a/src/main/resources/com/example/paint/hello-view.fxml
+++ b/src/main/resources/com/example/paint/hello-view.fxml
@@ -7,8 +7,9 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="899.0" prefWidth="1241.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.paint.PaintController">
    <children>
-      <Button layoutX="25.0" layoutY="14.0" mnemonicParsing="false" onAction="#click" text="Button" />
-      <ColorPicker layoutX="102.0" layoutY="14.0" />
-      <Canvas height="844.0" layoutX="7.0" layoutY="46.0" width="1226.0" />
+      <Button layoutX="25.0" layoutY="14.0" mnemonicParsing="false" onAction="#clickInDraw" text="Draw" />
+      <ColorPicker fx:id="colorPicker" layoutX="102.0" layoutY="14.0" />
+      <Canvas fx:id="canvas" height="801.0" layoutX="-7.0" layoutY="100.0" width="1250.0" />
+      <Button layoutX="25.0" layoutY="59.0" mnemonicParsing="false" onAction="#clickInClear" text="Clear" />
    </children>
 </Pane>
